# task-manager

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: settings.py  urls.py
authapp/: middleware.py  views.py
authapp/management/commands/: seed_users.py
config/nginx/: app.conf
tasks/: models.py  schema.py  views.py
tasks/migrations/: 0001_initial.py
